--- a/index.html
+++ b/index.html
@@ -14,8 +14,19 @@
 
 <body>
 
-    <h1>Website von Jonas Lippl</h1>
-    <p>Herzlich willkommen auf meiner persöhnlichen Website. Ich hab diese Seite als Übung zum Programmieren in HTML und CSS erstellt. Sie wird auf meinem Raspberry Pi gehostet. Details hierzu finden sie in den Programmier-Projekten.
+    <div id="myNav" class="overlay">
+        <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+        <div class="overlay-content">
+            <a href="index.html">Startseite</a>
+            <a href="/jonas-lippl/schreinern.html">Holz-Projekte</a>
+            <a href="/jonas-lippl/coding.html">Programmier-Projekte</a>
+        </div>
+    </div>
+
+    <span class="menuebutton" , style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776; Menü</span>
+
+    <h1>Jonas Lippl</h1>
+    <p>Herzlich willkommen auf meiner Website. Ich hab diese Seite als Übung zum Programmieren in HTML und CSS erstellt. Sie wird auf meinem Raspberry Pi gehostet. Details hierzu finden sie in den Programmier-Projekten.
     </p>
     <!--Link to part of current document-->
 
