--- a/jonas-lippl/schreinern.html
+++ b/jonas-lippl/schreinern.html
@@ -6,14 +6,23 @@
     <meta name="author" content="Jonas Lippl">
     <meta name="description" content="This is my personal homepage to introduce myselfe.">
     <link rel="icon" href="../images/favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="../styles/css-file-woodworking.css">
-    <script src="scripts/js-file-woodworking.js" defer></script>
+    <link rel="stylesheet" href="../styles/css-file.css">
+    <script src="../scripts/js-file.js" defer></script>
     <title>Jonas Lippl - Holz-Projekte</title>
 </head>
 
 <body>
-    <p><a href="../index.html">Zurück</a> zur Hauptseite.</p>
-    <!--Use ../ to move upwards in folders-->
+    <div id="myNav" class="overlay">
+        <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+        <div class="overlay-content">
+            <a href="../index.html">Startseite</a>
+            <a href="schreinern.html">Holz-Projekte</a>
+            <a href="coding.html">Programmier-Projekte</a>
+        </div>
+    </div>
+
+    <span style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776; Menü</span>
+
     <h1>Holz-Projekte</h1>
 
     <p>Auf dieser Seite will ich einige meiner Holz-Projekte vorstellen. Ich habe das Schreinern von meinem Papa und meinem Opa gelernt und schon früh damit angefangen selber Kleinigkeiten zu bauen.
