--- a/jonas-lippl/coding.html
+++ b/jonas-lippl/coding.html
@@ -39,9 +39,9 @@
     <p>verwenden um den Apache2 Webserver zu installieren. Anschließend ersetzt man im Verzeichnis \var\www\ die Index.html Datei mit den entsprechenden Dateien der Website. Um aus dem Internet darauf zugreifen zu können muss man nun noch Dynamische DNS
         einrichten, damit der Computer immer unter der selben Adresse erreichbar ist, auch wenn sich seinen IP-Adresse regelmäßig ändert.</p>
 
-    <h2>Code für diese Website</h2>
-    <p>Diese Website habe ich als Übung zum lernen von HTML und CSS erstellt. In Zukunft möchte ich sie noch mit weiteren Features erweitern. Dazu habe ich angefangen JavaScript auf Free-Code-Camp zu lernen. Die Codes für die Website gibt es auf <a href=""
-            title="Code für die Website">GitHub</a>. Ich versuche die Veränderungen regelmäßig zu aktualisieren.
+    <h2>Berechnen von Spacing-Ratios und Graphische Darstellung</h2>
+    <p>In meiner Bachelorarbeit hab ich das Verhalten verschiedener Klassen von nicht-Hermiteschen Zufallsmatrizen untersucht. Dazu habe ich unter anderem die Eigenwerte berechnet und das Verhätnis aus nächst gelegenem Eigenwert zum übernächsten Eigenwert
+        berechnet.
     </p>
 </body>
 
