--- a/jonas-lippl/coding.html
+++ b/jonas-lippl/coding.html
@@ -40,7 +40,7 @@
         einrichten, damit der Computer immer unter der selben Adresse erreichbar ist, auch wenn sich seinen IP-Adresse regelmäßig ändert.</p>
 
     <h2>Berechnen von Spacing-Ratios und Graphische Darstellung</h2>
-    <p>In meiner Bachelorarbeit hab ich das Verhalten verschiedener Klassen von nicht-Hermiteschen Zufallsmatrizen untersucht. Dazu habe ich unter anderem die Eigenwerte berechnet und das Verhätnis aus nächst gelegenem Eigenwert zum übernächsten Eigenwert
+    <p>In meiner Bachelorarbeit hab ich das Verhalten verschiedener Klassen von nicht-Hermiteschen Zufallsmatrizen untersucht. Dazu habe ich unter anderem die Eigenwerte berechnet und das Verhältnis aus nächst gelegenem Eigenwert zum übernächsten Eigenwert
         berechnet.
     </p>
 </body>
