--- a/jonas-lippl/schreinern.html
+++ b/jonas-lippl/schreinern.html
@@ -31,30 +31,53 @@
     <p>Diese Holztasche besteht aus sehr dünn geschnittenem Kirschholz. Sie wird durch zwei Magneten verschlossen, der Knopf ist rein dekorativ. Die Tasche lässt sich öffnen, da die klappbaren Elemente aus sehr feinen Holzlamellen aufgebaut sind. Als Tragegurt
         wird ein Hanfseil verwendet um ein weiteres Naturmaterial mit dem Holz zu kombinieren.
     </p>
-    <img src="../images/tasche1.png" alt="Holztasche Vorderseite">
-    <img src="../images/tasche2.png" alt="Holztasche Rückseite">
+    <div class="row">
+        <div class="column2">
+            <img src="../images/tasche1.png" alt="Holztasche Vorderseite">
+        </div>
+        <div class="column2">
+            <img src="../images/tasche2.png" alt="Holztasche Rückseite">
+        </div>
+    </div>
+
+
 
     <h2>Tastatur</h2>
     <p>Hier habe ich ein sogenanntes Keyboard-Kit gekauft und dafür ein Gehäuse aus Walnussholz gefräst. Am Gehäuse kann man eine Handgelenkauflage mit Magneten befestigen.</p>
-    <img src="../images/tastatur1.png" alt="Tastatur">
-    <img src="../images/tastatur2.png" alt="Tastatur">
+    <div class="row">
+        <div class="column2">
+            <img src="../images/tastatur1.png" alt="Tastatur">
+        </div>
+        <div class="column2">
+            <img src="../images/tastatur2.png" alt="Tastatur">
+        </div>
+    </div>
 
     <h2>Kaffeezubereiter</h2>
     <p>In der Werkstatt habe ich ein altes Kupferrohr gefunden. Mit einem Stück Walnussholz, einem hitzebeständigem Glastrichter und einem Edelstahl-Kaffeefilter habe ich daraus einen Kaffeezubereiter gebaut.</p>
     <img src="../images/kaffee.png" alt="Kaffeezubereiter">
 
     <h2>Schachspiel</h2>
-    <p>Dieses Schachspiel besteht aus Ahorn- (weiße Figuren) und Walnussholz (schwarze Figuren). Alle 32 Figuren habe ich einzeln gedrechselt. Bei den Springern habe die Flachen Seiten mit einer feinen Säge bearbeitet. Die Ränder des Schachspiels bestehen
+    <p>Dieses Schachspiel besteht aus Ahorn- (weiße Figuren) und Walnussholz (schwarze Figuren). Alle 32 Figuren habe ich einzeln gedrechselt. Bei den Springern habe ich die Flachen Seiten mit einer feinen Säge bearbeitet. Die Ränder des Schachspiels bestehen
         aus dem Rand des Walnussbretts. Dadurch wirken sie schön natürlich geschwungen.
     </p>
-    <img src="../images/schach1.png" alt="Schachspiel">
-    <img src="../images/schach2.png" alt="Schachspiel">
+
+    <img src="../images/schach1.png" alt="Schachspiel" style="width:40%">
+
+
+
 
     <h2>Mäppchen</h2>
-    <p>
+    <p>Dieses Federmäppchen besteht aus Kirschholz und funktioniert nach einem ähnlichem Prinzip wie die Holztasche. Es lässt sich öffnen, da die feinen Lamellen eine Bewegung ermöglichen. Das Mäppchen wird ebenfalls mit zwei Magneten verschlossen.
     </p>
-    <img src="../images/mäppchen1.png" alt="Mäppchen">
-    <img src="../images/mäppchen2.png" alt="Mäppchen">
+    <div class="row">
+        <div class="column2">
+            <img src="../images/mäppchen1.png" alt="Mäppchen" style="width:100%">
+        </div>
+        <div class="column2">
+            <img src="../images/mäppchen2.png" alt="Mäppchen" style="width:100%">
+        </div>
+    </div>
 
 
 
