--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <meta name="author" content="Jonas Lippl">
     <meta name="description" content="Dies ist meine persöhnliche Website auf der ich mich vorstellen möchte.">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="images/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="styles/css-file.css">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
@@ -13,7 +14,7 @@
 </head>
 
 <body>
-
+    <div class="spacer layer1"></div>
     <div id="myNav" class="overlay">
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
         <div class="overlay-content">
@@ -80,7 +81,7 @@
     <h2 id="Mailing_address">Email</h2>
     <p>privat: <a href="mailto:jonaslippl99@gmail.com">jonaslippl99@gmail.com</a></p>
     <p>Universität: <a href="mailto:jonas.lippl@stud.uni-regensburg.de">jonas.lippl@stud.uni-regensburg.de</a></p>
-
+    <div class="spacer layer2"></div>
 
 </body>
 
