--- a/jonas-lippl/schreinern.html
+++ b/jonas-lippl/schreinern.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <meta name="author" content="Jonas Lippl">
     <meta name="description" content="This is my personal homepage to introduce myselfe.">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="../images/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="../styles/css-file.css">
     <script src="../scripts/js-file.js" defer></script>
@@ -12,6 +13,7 @@
 </head>
 
 <body>
+    <div class="spacer layer1"></div>
     <div id="myNav" class="overlay">
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
         <div class="overlay-content">
@@ -40,7 +42,8 @@
         </div>
     </div>
 
-
+    <div class="spacer layer2"></div>
+    <div class="spacer layer1"></div>
 
     <h2>Tastatur</h2>
     <p>Hier habe ich ein sogenanntes Keyboard-Kit gekauft und dafür ein Gehäuse aus Walnussholz gefräst. Am Gehäuse kann man eine Handgelenkauflage mit Magneten befestigen.</p>
@@ -53,9 +56,15 @@
         </div>
     </div>
 
+    <div class="spacer layer2"></div>
+    <div class="spacer layer1"></div>
+
     <h2>Kaffeezubereiter</h2>
     <p>In der Werkstatt habe ich ein altes Kupferrohr gefunden. Mit einem Stück Walnussholz, einem hitzebeständigem Glastrichter und einem Edelstahl-Kaffeefilter habe ich daraus einen Kaffeezubereiter gebaut.</p>
     <img src="../images/kaffee.png" alt="Kaffeezubereiter">
+
+    <div class="spacer layer2"></div>
+    <div class="spacer layer1"></div>
 
     <h2>Schachspiel</h2>
     <p>Dieses Schachspiel besteht aus Ahorn- (weiße Figuren) und Walnussholz (schwarze Figuren). Alle 32 Figuren habe ich einzeln gedrechselt. Bei den Springern habe ich die Flachen Seiten mit einer feinen Säge bearbeitet. Die Ränder des Schachspiels bestehen
@@ -64,8 +73,8 @@
 
     <img src="../images/schach1.png" alt="Schachspiel" style="width:40%">
 
-
-
+    <div class="spacer layer2"></div>
+    <div class="spacer layer1"></div>
 
     <h2>Mäppchen</h2>
     <p>Dieses Federmäppchen besteht aus Kirschholz und funktioniert nach einem ähnlichem Prinzip wie die Holztasche. Es lässt sich öffnen, da die feinen Lamellen eine Bewegung ermöglichen. Das Mäppchen wird ebenfalls mit zwei Magneten verschlossen.
@@ -81,7 +90,7 @@
 
 
 
-
+    <div class="spacer layer2"></div>
 
 </body>
 
