--- a/jonas-lippl/schreinern.html
+++ b/jonas-lippl/schreinern.html
@@ -29,6 +29,10 @@
 
     <p>Auf dieser Seite will ich einige meiner Holz-Projekte vorstellen. Ich habe das Schreinern von meinem Papa und meinem Opa gelernt und schon früh damit angefangen selber Kleinigkeiten zu bauen.
     </p>
+
+    <div class="spacer layer2"></div>
+    <div class="spacer layer1"></div>
+
     <h2>Holztasche</h2>
     <p>Diese Holztasche besteht aus sehr dünn geschnittenem Kirschholz. Sie wird durch zwei Magneten verschlossen, der Knopf ist rein dekorativ. Die Tasche lässt sich öffnen, da die klappbaren Elemente aus sehr feinen Holzlamellen aufgebaut sind. Als Tragegurt
         wird ein Hanfseil verwendet um ein weiteres Naturmaterial mit dem Holz zu kombinieren.
